fixed account creation issue and changed text to be more readable

--- a/src/App.css
+++ b/src/App.css
@@ -322,3 +322,7 @@ align-items: center;
 #accountButton{
   margin-bottom: 1.5rem;
 }
+.postUser{
+  color:white;
+  font-size: 1rem;
+}
